--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>CV</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/iconexp.png">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012151/iconexp_i0gths.png">
 </head>
 <body>
   <app-root></app-root>
