--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>CV</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012151/iconexp_i0gths.png">
+
+  <style>
+    /* Mantén oculto el root hasta que termine el bootstrap */
+    app-root[hidden] { display: block !important; visibility: hidden; }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root hidden></app-root>
 </body>
 </html>
